devops/k8s/prod/status.web/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sosadmingui
  labels:
    name: sosadmingui
