devops/k8s/prod/status.web/api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sosadmingui-api
  name: sosadmingui-api
  namespace: sosadmingui
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: sosadmingui-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sosadmingui-api
  name: sosadmingui-api
  namespace: sosadmingui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sosadmingui-api
  strategy: 
      type: Recreate
  template:
    metadata:
      annotations:
        logging: "true"
      labels:
        app: sosadmingui-api
    spec:
      topologySpreadConstraints: # try to spread out api instances over available nodes
      - labelSelector:
          matchLabels:
            app: sosadmingui-api # pods labeled app: sosadmingui-api
        maxSkew: 1
        topologyKey: kubernetes.io/hostname # 1 node = 1 topology
        whenUnsatisfiable: DoNotSchedule
      containers:
        - env:
          - name: ASPNETCORE_ENVIRONMENT
            value: prod
          - name: ApiKey
            valueFrom:
                secretKeyRef:
                  key: ApiKey
                  name: sosadmingui-secret
          - name: ApplicationId
            valueFrom:
                secretKeyRef:
                  key: ApplicationId
                  name: sosadmingui-secret
          - name: AuthSecretKey
            valueFrom:
                secretKeyRef:
                  key: AuthSecretKey
                  name: sosadmingui-secret
          - name: AuthSecretPassword
            valueFrom:
                secretKeyRef:
                  key: AuthSecretPassword
                  name: sosadmingui-secret
          - name: InstrumentationKey
            valueFrom:
                secretKeyRef:
                  key: InstrumentationKey
                  name: sosadmingui-secret
          - name: ProcessDbPassword
            valueFrom:
                secretKeyRef:
                  key: ProcessDbPassword
                  name: sosadmingui-secret
          - name: ProcessDbUserName
            valueFrom:
                secretKeyRef:
                  key: ProcessDbUserName
                  name: sosadmingui-secret
          - name: SearchDbPassword
            valueFrom:
                secretKeyRef:
                  key: SearchDbPassword
                  name: sosadmingui-secret
          - name: SearchDbTestPassword
            valueFrom:
                secretKeyRef:
                  key: SearchDbTestPassword
                  name: sosadmingui-secret
          - name: SearchDbTestUserName
            valueFrom:
                secretKeyRef:
                  key: SearchDbTestUserName
                  name: sosadmingui-secret
          - name: SearchDbUserName
            valueFrom:
                secretKeyRef:
                  key: SearchDbUserName
                  name: sosadmingui-secret
          - name: AllowedOrigins
            value: 'https://sos-admin.artdata.slu.se'
          - name: ApiTestConfiguration
            value: '{"ApiUrl": "https://sos-search.artdata.slu.se/", "HangfireUrl": "https://sos-hangfire.artdata.slu.se/hangfire"}'
          - name: ApplicationInsightsConfiguration
            value: '{"BaseAddress": "https://api.applicationinsights.io/v1", "AcceptHeaderContentType": "application/json", "InstrumentationKey": "SECRET_PLACEHOLDER", "ApiKey": "SECRET_PLACEHOLDER", "ApplicationId": "SECRET_PLACEHOLDER"}'
          - name: AuthenticationConfiguration
            value: '{"SecretKey": "SECRET_PLACEHOLDER", "SecretPassword": "SECRET_PLACEHOLDER", "Issuer": "https://sos-admin.artdata.slu.se"}'
          - name: ProcessDbConfiguration
            value: '{"UserName": "SECRET_PLACEHOLDER", "Password": "SECRET_PLACEHOLDER", "Hosts": [{"Name": "artmongo-1.artdata.slu.se", "Port": 27017}, {"Name": "artmongo-2.artdata.slu.se", "Port": 27017}, {"Name": "artmongo-3.artdata.slu.se", "Port": 27017}], "ReplicaSetName": "mongo-prod", "DatabaseName": "sos", "UseTls": false, "AuthenticationDb": "admin", "ReadBatchSize": 10000, "WriteBatchSize": 10000}'
          - name: SearchDbConfiguration
            value: '{"UserName": "SECRET_PLACEHOLDER", "Password": "SECRET_PLACEHOLDER", "Clusters": [{"Hosts": ["https://artsosdata2-1.artdata.slu.se:9200", "https://artsosdata2-2.artdata.slu.se:9200", "https://artsosdata2-3.artdata.slu.se:9200"]}, {"Hosts": ["https://artsosdata2-4.artdata.slu.se:9200", "https://artsosdata2-5.artdata.slu.se:9200", "https://artsosdata2-6.artdata.slu.se:9200"]}], "DebugMode": false, "IndexPrefix": "sos", "IndexSettings": [{"Name": "observation", "ReadBatchSize":  [...]
          - name: SearchDbTestConfiguration
            value: '{"UserName": "SECRET_PLACEHOLDER", "Password": "SECRET_PLACEHOLDER", "Clusters": [{"Hosts": ["https://artsosdata2-1.artdata.slu.se:9200", "https://artsosdata2-2.artdata.slu.se:9200", "https://artsosdata2-3.artdata.slu.se:9200"]}, {"Hosts": ["https://artsosdata2-4.artdata.slu.se:9200", "https://artsosdata2-5.artdata.slu.se:9200", "https://artsosdata2-6.artdata.slu.se:9200"]}], "DebugMode": false, "IndexPrefix": "sos-st", "IndexSettings": [{"Name": "observation", "ReadBatchSize [...]
          image: adbpocreg.azurecr.io/sosadmingui-api:$(Parameters.ImageTag)
          name: sosadmingui-api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe: # ready to accept traffic, failure = stops routing traffic to this pod but does not restart the pod!
            httpGet:
              path: /healthz
              port: 5000
              httpHeaders:
              - name: Host
                value: KubernetesReadinessProbe
            initialDelaySeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 30 # runs every 30 seconds
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
