devops/k8s/prod/status.web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sosadmingui-ingress
  namespace: sosadmingui
  annotations:
    cert-manager.io/cluster-issuer: vault-slu.se-cluster-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - sos-admin.artdata.slu.se
      - sos-admin-bff.artdata.slu.se
      secretName: wildcard.artdata.slu.se-tls
  rules:
  - host: sos-admin.artdata.slu.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sosadmingui-web
            port:
              number: 4200
  - host: sos-admin-bff.artdata.slu.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sosadmingui-api
            port:
              number: 5000
